[Nav Experiment] Correct navItem title usage.

- Work around pushState changes that overwrite the navigation item
title on pushState.  The root cause of the bug is crbug.com/908173.

- Correctly set navigation item titles on restore.

Bug: 854174, 872211
Change-Id: Ife407429d7f2723fc9dac6458bf81bdb1ae64ff8
Reviewed-on: https://chromium-review.googlesource.com/c/1349776
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Reviewed-by: Danyao Wang <danyao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611180}
Former-commit-id: 594f66a8db0a96124dc39c54eb5dea590d1232a3